--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DRL_PATH=/Users/toby.phamm/Desktop/fee-cal.drl
 MQTT_CONNECTION_STRING=tcp://127.0.0.1:18014
+FEE_CALC_FLAG_VARIABLE_NAME=ruleMatched
